Possibly fixed the safari slideshow layout bug?

--- a/app/assets/stylesheets/_projects.scss
+++ b/app/assets/stylesheets/_projects.scss
@@ -191,7 +191,6 @@
 //////////////////////
 // Showcases 
 /////////////////////
-
 .showcase {
 	position: fixed;
 	width: 100%; height: 100%;
@@ -307,6 +306,7 @@
 	cursor: pointer;
 	top: 10px; right: 10px;
 	padding: 10px 12px;
+	text-shadow: 0px 0px 10px #000;
 	border-radius: $border-radius / 3;
 	z-index: $z-modal + 50;
 	font-size: 0.5em;
@@ -322,8 +322,6 @@
 //////////////////////
 // Slick Slideshow 
 /////////////////////
-
-
 .slick-slider {
 	height: 100% !important;
 	width: 100%;
@@ -354,11 +352,22 @@
 		}
 	}
 	img {
-		height: 100% !important;
+		height: 100% !important; width: 100% !important;
+		vertical-align: middle !important;
+		top: 50%; margin-top: -200px;
+		position: relative;
 	}
 }
 
-
+.slick-slide {
+	img {
+		margin: auto !important;
+		width: auto !important;
+		height: 100% !important;
+		position: relative;
+		top: 0;
+	}
+}
 
 .slick-dots {
 	position: absolute;
